Fix bug that caused the 'learn more' buttons to not be visible on mobile.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -832,7 +832,11 @@ a {
 .btn-services {
   cursor: pointer;
   position: absolute;
+  display: inline-block;
   bottom: 2em;
+  @include mobile {
+    position: static;
+  }
 }
 
 .btn-learn-more {
